[package]
name = "zing_fog2d"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["ZoOL <zhooul@gmail.com>"]
description = "A 2D fog of war plugin for Bevy"

[features]
default = ["2d"]
2d = []

[lib]
name = "zing_fog2d"
path = "../../src/lib.rs"
required-features = ["2d"]
bench = false


[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "multi_threaded",
    "png",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "webgl2",
    "x11"
] }

bevy_asset = { version = "0.15" }
bytemuck = { version = "1.22.0" ,features = ["derive"] }

[lints]
workspace = true

[[example]]
name = "fog2d"
